--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <link rel="icon" type="image/svg+xml" href="/src//assets/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Leonardo Burgos</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 </head>
 
 <body class="bg-zinc-800 text-white">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 </body>
 
 </html>
